# susi_translator

./: .env.example  .gitignore  README.md  pyproject.toml
flask/: .dockerignore  .env.example  Dockerfile  README.md  audio_grabber.py  audio_sources.py  cookies.txt  docker-compose.yml  requirements.txt  transcribe_server.py
flask/auth/: admin_panel.py  create_superuser.py  decorators.py  models.py  routes.py
flask/certbot/: authenticator.sh  entrypoint.sh
flask/migrations/versions/: 001_initial_schema.py
flask/nginx/: Dockerfile.nginx  bootstrap_ssl.sh  generate_ssl.sh  nginx.conf
flask/providers/: __init__.py  base.py  registry.py
flask/providers/plugins/: __init__.py
flask/providers/plugins/transcription_plugins/: Untitled-1  faster_whisper_local.py  groq_whisper.py  whisper_local.py
flask/providers/plugins/translation_plugins/: groq_llama.py  nllb_ctranslate2.py  nllb_local.py
flask/static/css/: config.css  create-room.css  stream.css  style.css
flask/static/js/: config.js  lobby.js  stream.js  web_mic.js
flask/templates/: base.html  config.html  create-room.html  stream.html
flask/tests/: conftest.py  test_auth.py  test_ctranslate2_providers.py  test_endpoints.py  test_provider_architecture.py  test_websocket_stream.py
website/: docusaurus.config.js
