[project]
name = "susi-translator"
version = "0.1.0"
description = "Real-time transcription and translation prototype with Django and Flask backends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django",
    "django-cors-headers",
    "djangorestframework",
    "drf-yasg",
    "flask",
    "flask-bcrypt>=1.0.1",
    "flask-cors",
    "flask-jwt-extended>=4.7.4",
    "flask-restx",
    "flask-sqlalchemy>=3.1.1",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "mkdocs",
    "mkdocs-bootswatch",
    "numpy",
    "openai-whisper",
    "psycopg2-binary>=2.9.12",
    "pyaudio",
    "pybars3",
    "python-dotenv",
    "requests",
    "scipy",
    "torch",
    "transformers>=5.10.2",
    "yt-dlp",
]

[tool.uv]
package = false

[dependency-groups]
# Install with `uv sync --group dev` to pick up test-only deps.
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["flask/tests"]
addopts = "-ra"
